Added some more tests and trials

--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
   </head>
 
   <body>
-    <p>Hello Doms</p>
-  </body>
+    <div id="nestingTest">
+      <div>
+        <p id="myParent">This is a nesting test</p>
+      </div>
+      <div id="child1">
+        <p>This is a nesting test</p>
+      </div>
+      <div id="child2">
+        <p>This is a nesting test</p>
+      </div>
+      <div id="child3">
+        <p>This is a nesting test</p>
+      </div>
+    </div>
+    <p id="greeting">Hello Doms</p>
 
-  <script src="./JS/app.js"></script>
+    <div id="innerTest">
+
+    </div>
+  
+    <script src="./JS/app.js"></script>
+  </body>  
 </html>
